--- a/ieee-template/rv-paper.tex
+++ b/ieee-template/rv-paper.tex
@@ -71,7 +71,7 @@ It may be used for A4 paper size if the paper size setting is suitably modified.
 \subsection{Maintaining the Integrity of the Specifications}
 
 The template is used to format your paper and style the text. All margins, column widths, line spaces, and text fonts are prescribed; please do not alter them. You may note peculiarities. For example, the head margin in this template measures proportionately more than is customary. This measurement and others are deliberate, using specifications that anticipate your paper as one part of the entire proceedings, and not as an independent document. Please do not revise any of the current designations
-
+%chi hang hahahahaa
 \section{MATH}
 
 Before you begin to format your paper, first write and save the content as a separate text file. Keep your text and graphic files separate until after the text has been formatted and styled. Do not use hard tabs, and limit use of hard returns to only one return at the end of a paragraph. Do not add any kind of pagination anywhere in the paper. Do not number text heads-the template will do that for you.
